--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+*.pdf
+*.txt
+
+!LICENSE.txt
+
 # Visual Studio project
 *.vcxproj
 *.vcxproj.filters
