Prepare for merge

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 *.pdf
+*.txt
+
+!LICENSE.txt
 
 # Visual Studio project
 *.vcxproj
